FORGE-688: Update docs